app-ols-integration/main/default/objects/ContentVersion/fields/Brochure_Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Coverage_Start_Date__c</fullName>
    <description>This is the coverage start date that a brochure for a certain brochure key should begin being used in circulation.</description>
    <inlineHelpText>This is the coverage start date that a brochure for a certain brochure key should begin being used in circulation.</inlineHelpText>
    <label>Brochure Coverage Start Date</label>
    <type>Date</type>
</CustomField>