app-ols-integration/main/default/objects/ContentVersion/fields/Brochure_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For OLS welcome email brochures. If Inactive this Brochure will not be used in system generated welcome emails.</description>
    <inlineHelpText>If Inactive this Brochure will not be used in system generated welcome emails.</inlineHelpText>
    <label>Brochure Inactive</label>
    <type>Checkbox</type>
</CustomField>