app-ols-integration/main/default/objects/ContentVersion/fields/Brochure_Key__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Key__c</fullName>
    <description>This aids in finding files to send in welcome emails for Online Store Customers.</description>
    <label>Brochure Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>