app-ols-integration/main/default/objects/ContentVersion/recordTypes/OLS_Brochure.recordType-meta.xml
<RecordType>
    <fullName>OLS_Brochure</fullName>
    <active>true</active>
    <description>Brochure PDF that is sent out with OLS welcome emails</description>
    <label>OLS Brochure</label>
</RecordType>